add: Google DriveによるDVC remoteの設定

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,6 @@ torch = {source = "pytorch_cu130"}
 
 [dependency-groups]
 dev = [
-    "dvc (>=3.64.0,<4.0.0)"
+    "dvc (>=3.64.0,<4.0.0)",
+    "dvc-gdrive (>=3.0.1,<4.0.0)"
 ]
