add: svmによる学習の追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,5 +39,6 @@ dev = [
     "dvc (>=3.64.0,<4.0.0)",
     "dvc-gdrive (>=3.0.1,<4.0.0)",
     "pyopenssl (>=25.3.0,<26.0.0)",
-    "cryptography (>=46.0.3,<47.0.0)"
+    "cryptography (>=46.0.3,<47.0.0)",
+    "ruff (>=0.14.7,<0.15.0)"
 ]
