--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "matplotlib (>=3.10.7,<4.0.0)",
     "torchvision (>=0.24.1,<0.25.0)",
     "torchaudio (>=2.9.1,<3.0.0)",
-    "torch (>=2.9.1,<3.0.0)"
+    "torch (>=2.9.1,<3.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)"
 ]
 
 
